# ZK

./: .gitignore  22main.py  Cargo.toml  README.md  go.mod  go.sum  groth16.py  main.go  main.py  main2.txt  new.py  noi.py  plonk.py  proof-agg.py  test.py
agg-proof/: pairing_test.py  reademe.md
artifacts/: checksums.txt  fib_verifier.wasm
bellman_demo/: Cargo.toml
bellman_demo/src/: main.rs
circom/: ex1.circom  ex1.r1cs  input.json
circom/ex1_js/: ex1.wasm  witness.json
circom_1/: ex1.sym  readme.md
circom_1/ex1_js/: generate_witness.js  witness.wtns
circom_2/: ex.circom  ex.r1cs  ex.sym  input.json  readme.md
circom_2/ex_js/: ex.wasm  generate_witness.js  witness.json  witness.wtns
contract-solidity-gnark/: PolyVerifier.sol
contract-solidity-gnark/contract-Poly/: PolyVerifierFull.sol
contract-solidity-gnark/contract-ed25519-batch/: Ed25519BatchVerifier.sol  input.json
contracts/: optimizer-arm64.sh
contracts/fib-verifier/: Cargo.toml
contracts/fib-verifier/src/: lib.rs
gnark/: go.mod  go.sum  main.go
gnark-hash-sha256/: gnark.go
gnark/cmd/: dump_commit_info.go  groth16-fib.go  groth16.go  plonk.go  root.go
gnark/store/: poly_circuit.r1cs  poly_proving.key  poly_public.wtns  poly_verifying.key
m2/: R-to-Q.py  TS.py  checko1.py  pairing.py  pairing_test.py  test-group12.py
m3/: p_p_c.py
msgs-circuit/: ALL_ATTACKS_FIXED.md  REMAINING_ATTACK_VECTORS.md  circuit.go  go.mod  go.sum  log.txt  main.go  msg.go  msg_test.go  test_message_skipping_attack.go  tx_field_test.go  txs_field_test.go  verify-tx-field.go  verify-txs-field.go
(+30 files in other folders)
