[package]
name = "bellman_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bellman = { git = "https://github.com/zkcrypto/bellman", rev = "9bb30a7bd261f2aa62840b80ed6750c622bebec3" }
pairing = { git = "https://github.com/zkcrypto/pairing" ,rev = "6f1348f23312b3bbb3556a111ca075072967b26d"}
bls12_381 = "0.7"