[package]
name = "fib-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CosmWasm contract that verifies Fibonacci outputs."
repository = "https://github.com/succinctlabs/sp1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.4", default-features = false }
cw-storage-plus = "1.2.0"
schemars = "0.8.21"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.64"
sp1-verifier = { version = "5.2.2", default-features = false }

[dev-dependencies]
cosmwasm-std = { version = "1.5.4", default-features = false, features = ["iterator"] }
